@@ -23,7 +23,8 @@
  */
 
 #import <Foundation/Foundation.h>
-#import <ApplicationKit/ApplicationKit.h>
+// FIXME: import for AppKit.h doesn't work when used here with GNUstep
+//#import <ApplicationKit/ApplicationKit.h>
 
 @interface UKRunner : NSObject {
     int testClassesRun;
